# Python-API-Wrapper

./: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: api.rst  conf.py  index.rst  quickstart.rst
examples/async/: celebrity.py  lyrics.py  nsfw_check.py  ocr.py  translate.py
examples/async/speech/: speech_to_text.py  text_to_speech.py
examples/sync/: celebrity.py  lyrics.py  nsfw_check.py  ocr.py  translate.py
examples/sync/speech/: speech_to_text.py  text_to_speech.py
openrobot/api_wrapper/: __init__.py  _async.py  _sync.py  error.py  results.py  speech.py  translate.py  utils.py
